--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11398,7 +11398,8 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: var(--bs-indigo);
+  background-color: white;
+  color: var(--bs-indigo);
 }
 
 .dev-icons {
