--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -228,7 +228,7 @@ sup {
 }
 
 a {
-  color: var(--bs-white);
+  color: var(--bs-primary);
   text-decoration: underline;
 }
 a:hover {
@@ -11326,6 +11326,9 @@ p.lead {
   font-weight: 500;
   font-size: 1.5rem;
 }
+#section-subtitle {
+  color: white;
+}
 
 #sideNav {
   padding-left: 1rem;
@@ -11403,7 +11406,7 @@ p.lead {
 }
 
 .dev-icons {
-  font-size: 3rem;
+  font-size: 1rem;
   color: var(--bs-primary);
 }
 
@@ -11435,10 +11438,6 @@ section.section-details .section-details-content {
 }
 
 #degree {
-  color: white;
-}
-
-#contact-info {
   color: white;
 }
 
